AnalisadorSintatico/analisadorSintatico.c
#include "../AnalisadorLexico/analisadorLexico.c"

char *tipoVariavelActual;
int ctrScopo = 0;
int linhaTmp = 0;
char *idActual;
Tipo tipoTokenActual;
ListaCodigo *lista = NULL;

void adicionarElemento(Tipo dadoToken)
{
    // Criar um novo nó
    ListaCodigo *newNode = (ListaCodigo *)malloc(sizeof(ListaCodigo));
    newNode->dadoToken = dadoToken;
    newNode->next = NULL;

    // Se a lista estiver vazia, o novo nó será o primeiro nó (cabeça)
    if (lista == NULL)
    {
        lista = newNode;
    }
    // Caso contrário, percorrer a lista até o último nó e inserir o novo nó no final
    else
    {
        ListaCodigo *atual = lista;
        while (atual->next != NULL)
        {
            atual = atual->next;
        }
        atual->next = newNode;
    }
}

void program(FILE *t)
{
    ListaCodigo *lista = NULL;
    tipoTokenActual = analex(ficheiro);
    do
    {
        external_declaration();
    } while (tipoTokenActual.token != TK_END);
}

void external_declaration()
{
    declaration_definition();
}

void declaration_definition()
{
    // Verificar se há um <declaration-specifier>
    if (is_declaration_specifier())
    {
        declaration_definition();
        declaration_definition1();
    }
    else if (is_struct_or_union())
    {
        adicionarElemento(tipoTokenActual);
        tipoTokenActual = analex(ficheiro);
        struct_or_union_specifier1();
    }
    else
    {
        // Erro de declaração
    }
}

bool is_declaration_specifier()
{
    if (is_storage_class_specifier())
    {
        adicionarElemento(tipoTokenActual);
        tipoTokenActual = analex(ficheiro);
        if (is_type_specifier())
        {
            adicionarElemento(tipoTokenActual);
            tipoTokenActual = analex(ficheiro);
            return true;
        }
    }
    else if (is_type_specifier())
    {
        adicionarElemento(tipoTokenActual);
        tipoTokenActual = analex(ficheiro);
        return true;
    }
    else if (is_type_qualifier())
    {
        adicionarElemento(tipoTokenActual);
        tipoTokenActual = analex(ficheiro);
        if (is_type_specifier())
        {
            adicionarElemento(tipoTokenActual);
            tipoTokenActual = analex(ficheiro);
            return true;
        }
    }
    else
    {
        return false;
    }
}

void declaration_definition1()
{
    // Verifica se é uma estrutura ou uniao
    if (is_struct_or_union())
    {
        adicionarElemento(tipoTokenActual);
        tipoTokenActual = analex(ficheiro);
        struct_or_union_specifier1();
    }
    // verifica se comeca com um ponteiro ou não
    else if (is_pointer())
    {
        adicionarElemento(tipoTokenActual);
        tipoTokenActual = analex(ficheiro);
        if (is_identifier())
        {
            strcpy(tipoTokenActual.tipoVariavel, tipoVariavelActual);
            adicionarElemento(tipoTokenActual);
            tipoTokenActual = analex(ficheiro);
            declaration1();
        }
    }
    else if (is_identifier())
    {
        strcpy(tipoTokenActual.tipoVariavel, tipoVariavelActual);
        adicionarElemento(tipoTokenActual);
        tipoTokenActual = analex(ficheiro);
        declaration1();
    }
    else
    {
        // Erro: estrutura ou união esperada
    }
}

void declarator1()
{
    function_definition();
    parameter_list();
    direct_declaration();
}

void declaration()
{
    while (1)
    {
        if (is_init_declarator())
        {
            process_init_declarator();
        }
        else
        {
            break;
        }
    }
    if (is_declaration1())
    {
        process_declaration1();
    }
}

void init_declarator()
{
    if (is_assignment_operator())
    {
        process_initializer();
    }
}

int is_pointer()
{
    // Verificar se há um <pointer>
    // Implemente a lógica de verificação aqui
}

void process_pointer()
{
    // Processar o <pointer>
    // Implemente a lógica de processamento aqui
}

bool is_identifier()
{
    if (strcmp(tipoTokenActual.token, TK_ID) == 0)
    {
        return true;
    }
    else
        return false;
}

void process_identifier()
{
    // Processar o "ID"
    // Implemente a lógica de processamento aqui
}

int is_declarator1()
{
    // Verificar se há um <declarator1>
    // Implemente a lógica de verificação aqui
}

int direct_declaration()
{
    // Verificar se há uma <direct-declaration>
    if (strcmp(tipoTokenActual, TK_IG) == 0)
    {
        adicionarElemento(tipoTokenActual);
        tipoTokenActual = analex(ficheiro);
        return true;
    }
    else
        return false;
}

void process_direct_declaration()
{
    // Processar a <direct-declaration>
    // Implemente a lógica de processamento aqui
}

int is_init_declarator()
{
    // Verificar se há um <init-declarator>
    // Implemente a lógica de verificação aqui
}

void process_init_declarator()
{
    // Processar o <init-declarator>
    // Implemente a lógica de processamento aqui
}

int is_declaration1()
{
    // Verificar se há um <declaration1>
    // Implemente a lógica de verificação aqui
}

void process_declaration1()
{
    // Processar o <declaration1>
    // Implemente a lógica de processamento aqui
}

int is_assignment_operator()
{
    // Verificar se há um operador de atribuição
    // Implemente a lógica de verificação aqui
}

void process_initializer()
{
    // Processar o <initializer>
    // Implemente a lógica de processamento aqui
}

void function_definition()
{
    function_declaration();
    compound_statement();
}

void function_declaration()
{
    if (strcmp(tipoTokenActual.token, TK_AP) == 0)
    {
        adicionarElemento(tipoTokenActual);
        tipoTokenActual = analex(ficheiro);
        parameter_list();

        if (strcmp(tipoTokenActual.token, TK_FP) == 0)
        {
            adicionarElemento(tipoTokenActual);
            tipoTokenActual = analex(ficheiro);
        }
        else
        {
            // Erro: fechamento de parênteses esperado
        }
    }
    else
    {
        // Erro: abertura de parênteses esperada
    }
}

void direct_declaration()
{
    if (is_open_bracket())
    {
        if (is_constant_expression())
        {
            // Processar a expressão constante
        }
        if (is_close_bracket())
        {
            direct_declarator();
        }
        else
        {
            // Erro: fechamento de colchete esperado
        }
    }
    else if (is_declaration())
    {
        // Processar a declaração
    }
}

bool is_storage_class_specifier()
{
    if (strcmp(tipoTokenActual.lexema, "auto") == 0 ||
        strcmp(tipoTokenActual.lexema, "static") == 0 ||
        strcmp(tipoTokenActual.lexema, "extern") == 0)
    {
        strcat(tipoVariavelActual, " ");
        strcat(tipoVariavelActual, tipoTokenActual.lexema);
        return true;
    }
    else
    {
        return false;
    }
}

bool is_type_specifier()
{
    // Verifica se há um <declaration-specifier>
    if (strcmp(tipoTokenActual.lexema, "void") == 0 ||
        strcmp(tipoTokenActual.lexema, "char") == 0 ||
        strcmp(tipoTokenActual.lexema, "short") == 0 ||
        strcmp(tipoTokenActual.lexema, "int") == 0 ||
        strcmp(tipoTokenActual.lexema, "long") == 0 ||
        strcmp(tipoTokenActual.lexema, "float") == 0 ||
        strcmp(tipoTokenActual.lexema, "double") == 0 ||
        strcmp(tipoTokenActual.lexema, "signed") == 0 ||
        strcmp(tipoTokenActual.lexema, "unsigned") == 0 ||
        strcmp(tipoTokenActual.lexema, "enum") == 0 ||
        strcmp(tipoTokenActual.lexema, "typedef") == 0)
    {
        strcat(tipoVariavelActual, " ");
        strcat(tipoVariavelActual, tipoTokenActual.lexema);
        return true;
    } /*
     else if (is_enum_specifier())
     {
         // Processar o especificador de enumeração
     }
     else if (is_typedef_name())
     {
         // Processar o nome de um typedef
     }*/
    else
    {
        return false;
    }
}

bool is_type_qualifier()
{
    if (strcmp(tipoTokenActual.lexema, "const") == 0 ||
        strcmp(tipoTokenActual.lexema, "volatile") == 0)
    {
        strcat(tipoVariavelActual, " ");
        strcat(tipoVariavelActual, tipoTokenActual.lexema);
        return true;
    }
    else
    {
        return false;
    }
}

void struct_or_union_specifier1()
{
    if (is_identifier())
    {
        strcpy(tipoTokenActual.tipoVariavel, tipoVariavelActual);
        adicionarElemento(tipoTokenActual);
        tipoTokenActual = analex(ficheiro);
        struct_or_union_specifier2();
    }
    else if (strcmp(tipoTokenActual.token, TK_AC) == 0)
    {
        adicionarElemento(tipoTokenActual);
        tipoTokenActual = analex(ficheiro);
        struct_declaration();
        if (strcmp(tipoTokenActual.token, TK_FC) == 0)
        {
            adicionarElemento(tipoTokenActual);
            tipoTokenActual = analex(ficheiro);
            struct_fim()
        }
        else
        {
            // Erro: fechamento de chave esperado
        }
    }
    else
    {
        // Erro: identificador ou abertura de chave esperada
    }
}

void struct_or_union_specifier2()
{
    if (strcmp(tipoTokenActual.token, TK_AC) == 0)
    {
        adicionarElemento(tipoTokenActual);
        tipoTokenActual = analex(ficheiro);
        struct_declaration();
        if (strcmp(tipoTokenActual.token, TK_FC) == 0)
        {
            adicionarElemento(tipoTokenActual);
            tipoTokenActual = analex(ficheiro);
            struct_fim()
        }
        else
        {
            // Erro: fechamento de chave esperado
        }
    }
    else
    {
        // Lista de declarações vazia
    }
}

void struct_fim()
{
    if (strcmp(tipoTokenActual.token, TK_ID) == 0)
    {
        adicionarElemento(tipoTokenActual);
        tipoTokenActual = analex(ficheiro);
        // Processar o identificador
        if (strcmp(tipoTokenActual.token, TK_PV) == 0)
        {
            adicionarElemento(tipoTokenActual);
            tipoTokenActual = analex(ficheiro);
            return;
        }
        else
        {
            // Erro: ponto e vírgula esperado
            return;
        }
    }
    else if (strcmp(tipoTokenActual.token, TK_PV) == 0)
    {
        // Processar o ponto e vírgula
        return;
    }
    else
    {
        // Erro: identificador ou ponto e vírgula esperado
        return;
    }
}

bool is_struct_or_union()
{
    if (strcmp(tipoTokenActual.lexema, "struct") == 0)
    {
        strcat(tipoVariavelActual, tipoTokenActual.lexema);
        return true;
    }
    else if (strcmp(tipoTokenActual.lexema, "union") == 0)
    {
        strcat(tipoVariavelActual, tipoTokenActual.lexema);
        return true;
    }
    else
        return false;
}

void struct_declaration()
{
    specifier_qualifier();
    struct_declaration_list();
}

void specifier_qualifier()
{
    strcpy(tipoVariavelActual, "");
    if (is_type_specifier())
    {
        return true;
    }
    else if (is_type_qualifier())
    {
        return true;
    }
    else
    {
        // Erro: especificador ou qualificador inválido
    }
}

void struct_declaration_list()
{
    struct_declarator();
    struct_declaration_list1();
}

void struct_declaration_list1()
{
    if (is_pointer() || is_identifier())
    {
        struct_declarator();
        struct_declaration_list1();
    }
    else
}

void struct_declarator()
{
    if (is_pointer())
    {
        adicionarElemento(tipoTokenActual);
        tipoTokenActual = analex(ficheiro);
        if (is_identifier())
        {
            strcpy(tipoTokenActual.tipoVariavel, tipoVariavelActual);
            adicionarElemento(tipoTokenActual);
            tipoTokenActual = analex(ficheiro);
            declaration1();
            struct_declaration1();
        }
    }
    else if (is_identifier())
    {
        strcpy(tipoTokenActual.tipoVariavel, tipoVariavelActual);
        adicionarElemento(tipoTokenActual);
        tipoTokenActual = analex(ficheiro);
        declaration1();
        struct_declaration1();
    }
    else
    {
        // Erro: declarador ou dois pontos esperados
    }
}

void struct_declarator1()
{
    if (strcmp(":", tipoTokenActual.lexema) == 0)
    {
        constant_expression();
    }
    else
    {
        // Nenhuma expressão constante encontrada
    }
}

void constant_expression()
{
    conditional_expression();
}

void conditional_expression()
{
    logical_or_expression();
    conditional_expression1();
}

void conditional_expression1()
{
    if (is_question_mark())
    {
        expression();
        if (is_colon())
        {
            conditional_expression1();
        }
        else
        {
            // Erro: dois pontos esperado
        }
    }
    else
    {
        // Expressão condicional opcional não encontrada
    }
}

void logical_or_expression()
{
    logical_and_expression();
    logical_or_expression1();
}

void logical_or_expression1()
{
    if (is_logical_or_operator())
    {
        logical_and_expression();
        logical_or_expression1();
    }
    else
    {
        // Operador lógico OU opcional não encontrado
    }
}

void logical_and_expression()
{
    inclusive_or_expression();
    logical_and_expression1();
}

void logical_and_expression1()
{
    if (is_logical_and_operator())
    {
        inclusive_or_expression();
        logical_and_expression1();
    }
    else
    {
        // Operador lógico E opcional não encontrado
    }
}

void inclusive_or_expression()
{
    exclusive_or_expression();
    inclusive_or_expression1();
}

void inclusive_or_expression1()
{
    if (is_inclusive_or_operator())
    {
        exclusive_or_expression();
        inclusive_or_expression1();
    }
    else
    {
        // Operador lógico OU inclusivo opcional não encontrado
    }
}

void exclusive_or_expression()
{
    and_expression();
    exclusive_or_expression1();
}

void exclusive_or_expression1()
{
    if (is_exclusive_or_operator())
    {
        and_expression();
        exclusive_or_expression1();
    }
    else
    {
        // Operador XOR opcional não encontrado
    }
}

void and_expression()
{
    equality_expression();
    and_expression1();
}

void and_expression1()
{
    if (is_and_operator())
    {
        equality_expression();
        and_expression1();
    }
    else
    {
        // Operador E opcional não encontrado
    }
}

void equality_expression()
{
    relational_expression();
    equality_expression1();
}

void equality_expression1()
{
    if (is_equality_operator())
    {
        relational_expression();
        equality_expression1();
    }
    else
    {
        // Operador de igualdade opcional não encontrado
    }
}

void relational_expression()
{
    shift_expression();
    relational_expression1();
}

void relational_expression1()
{
    if (is_relational_operator())
    {
        shift_expression();
        relational_expression1();
    }
    else
    {
        // Operador relacional opcional não encontrado
    }
}

void shift_expression()
{
    additive_expression();
    shift_expression1();
}

void shift_expression1()
{
    if (is_shift_operator())
    {
        additive_expression();
        shift_expression1();
    }
    else
    {
        // Operador de deslocamento opcional não encontrado
    }
}

void additive_expression()
{
    multiplicative_expression();
    additive_expression1();
}

void additive_expression1()
{
    if (is_additive_operator())
    {
        multiplicative_expression();
        additive_expression1();
    }
    else
    {
        // Operador aditivo opcional não encontrado
    }
}

void multiplicative_expression()
{
    cast_expression();
    multiplicative_expression1();
}

void multiplicative_expression1()
{
    if (is_multiplicative_operator())
    {
        cast_expression();
        multiplicative_expression1();
    }
    else
    {
        // Operador multiplicativo opcional não encontrado
    }
}

void cast_expression()
{
    if (is_unary_expression())
    {
        cast_expression();
    }
    else
    {
        // Vazio (ε)
    }
}

void unary_expression()
{
    if (is_postfix_expression())
    {
        // Nada a fazer, já está tratado na regra postfix_expression
    }
    else if (is_unary_operator())
    {
        cast_expression();
    }
    else if (is_sizeof_keyword())
    {
        unary_expression1();
    }
    else if (is_increment_operator())
    {
        unary_expression();
    }
    else if (is_decrement_operator())
    {
        unary_expression();
    }
    else
    {
        // Expressão unária inválida
    }
}

void unary_expression1()
{
    if (is_unary_expression())
    {
        // Nada a fazer, já está tratado na regra unary_expression
    }
    else if (is_type_name())
    {
        // Nada a fazer, tipo de nome tratado em outra parte do código
    }
    else
    {
        // Expressão unária inválida
    }
}

void postfix_expression()
{
    if (is_primary_expression())
    {
        postfix_expression1();
    }
    else
    {
        // Postfix expression inválida
    }
}

void postfix_expression1()
{
    if (is_array_access_operator())
    {
        expression();
        // Nada a fazer, array access tratado em outra parte do código
        postfix_expression1();
    }
    else if (is_function_call_operator())
    {
        // Nada a fazer, função chamada tratada em outra parte do código
        postfix_expression1();
    }
    else if (is_member_access_operator())
    {
        // Nada a fazer, acesso a membro tratado em outra parte do código
        postfix_expression1();
    }
    else if (is_increment_operator())
    {
        // Nada a fazer, incremento tratado em outra parte do código
        postfix_expression1();
    }
    else if (is_decrement_operator())
    {
        // Nada a fazer, decremento tratado em outra parte do código
        postfix_expression1();
    }
    else
    {
        // Vazio (ε)
    }
}

void primary_expression()
{
    if (is_identifier())
    {
        // Nada a fazer, identificador tratado em outra parte do código
    }
    else if (is_constant())
    {
        // Nada a fazer, constante tratada em outra parte do código
    }
    else if (is_string())
    {
        // Nada a fazer, string tratada em outra parte do código
    }
    else
    {
        // Expressão primária inválida
    }
}

void desp1()
{
    if (is_expression())
    {
        // Nada a fazer, expressão tratada em outra parte do código
        desp1();
    }
    else if (is_type_name())
    {
        // Nada a fazer, tipo de nome tratado em outra parte do código
        desp1();
    }
    else if (is_closing_parenthesis())
    {
        // Vazio (ε)
    }
    else
    {
        // Expressão desp1 inválida
    }
}

void expression()
{
    assignment_expression();
    expression1();
}

void expression1()
{
    if (is_comma_operator())
    {
        assignment_expression();
        expression1();
    }
    else
    {
        // Vazio (ε)
    }
}

void assignment_expression()
{
    if (is_conditional_expression())
    {
        // Nada a fazer, já está tratado na regra conditional_expression
    }
    else if (is_unary_expression())
    {
        if (is_assignment_operator())
        {
            assignment_expression();
        }
        else
        {
            // Expressão de atribuição inválida
        }
    }
    else
    {
        // Expressão de atribuição inválida
    }
}

void assignment_operator()
{
    if (is_assignment_operator())
    {
        // Nada a fazer, operador de atribuição válido
    }
    else
    {
        // Operador de atribuição inválido
    }
}

void unary_operator()
{
    if (is_unary_operator())
    {
        // Nada a fazer, operador unário válido
    }
    else
    {
        // Operador unário inválido
    }
}

void type_name()
{
    if (is_specifier_qualifier())
    {
        // Nada a fazer, especificador/qualificador de tipo tratado em outra parte do código
        while (is_specifier_qualifier())
        {
            // Loop para lidar com múltiplos especificadores/qualificadores de tipo
        }
        if (is_abstract_declarator())
        {
            // Nada a fazer, declarador abstrato tratado em outra parte do código
        }
    }
    else
    {
        // Nome de tipo inválido
    }
}

void parameter_list()
{
    declaration_definition();
    parameter_list1();
    parameter_list_id();
}

void parameter_list1()
{
    if (strcmp(tipoTokenActual.token, TK_VG)==0)
    {
        declaration_definition();
        parameter_list1();
    }
    else
    {
        // Vazio (ε)
    }
}

void parameter_list_id()
{
    if (is_identifier())
    {
        parm1();
    }
    else
    {
        // Vazio (ε)
    }
}

void parm1()
{
    if (is_comma_operator())
    {
        // Nada a fazer, vírgula tratada em outra parte do código
        identifier();
        parm1();
    }
    else
    {
        // Vazio (ε)
    }
}

void abstract_declarator()
{
    if (is_pointer())
    {
        abstract_declarator1();
    }
    else if (is_direct_abstract_declarator())
    {
        // Nada a fazer, declarador abstrato direto tratado em outra parte do código
    }
    else
    {
        // Declarador abstrato inválido
    }
}

void abstract_declarator1()
{
    if (is_direct_abstract_declarator())
    {
        // Nada a fazer, declarador abstrato direto tratado em outra parte do código
    }
    else
    {
        // Vazio (ε)
    }
}

void direct_abstract_declarator()
{
    if (is_opening_parenthesis())
    {
        abstract_declarator();
        // Verificar se é necessário fechar parêntese aqui
    }
    else if (is_direct_abstract_declarator1())
    {
        // Nada a fazer, declarador abstrato direto tratado em outra parte do código
    }
    else
    {
        // Declarador abstrato direto inválido
    }
}

void direct_abstract_declarator1()
{
    if (is_array_access_operator())
    {
        // Nada a fazer, operador de acesso a array tratado em outra parte do código
        if (is_constant_expression())
        {
            // Nada a fazer, expressão constante tratada em outra parte do código
        }
        direct_abstract_declarator1();
    }
    else if (is_function_call_operator())
    {
        // Nada a fazer, operador de chamada de função tratado em outra parte do código
        if (is_parameter_type_list())
        {
            // Nada a fazer, lista de tipos de parâmetros tratada em outra parte do código
        }
        direct_abstract_declarator1();
    }
    else
    {
        // Vazio (ε)
    }
}

void enum_specifier()
{
    if (is_enum())
    {
        enum_specifier1();
    }
    else
    {
        // Enum specifier inválido
    }
}

void enum_specifier1()
{
    if (is_identifier())
    {
        enum_specifier2();
    }
    else if (is_opening_brace())
    {
        enumeration_list();
        if (is_closing_brace())
        {
            // Nada a fazer, fechamento de chaves tratado em outra parte do código
        }
        else
        {
            // Falta fechar a chave '}' do enum specifier
        }
    }
    else
    {
        // Enum specifier inválido
    }
}

void enum_specifier2()
{
    if (is_opening_brace())
    {
        enumeration_list();
        if (is_closing_brace())
        {
            // Nada a fazer, fechamento de chaves tratado em outra parte do código
        }
        else
        {
            // Falta fechar a chave '}' do enum specifier
        }
    }
    else
    {
        // Vazio (ε)
    }
}

void enumeration_list()
{
    if (is_enumerator())
    {
        enumeration_list1();
    }
    else
    {
        // Enumeração vazia
    }
}

void enumeration_list1()
{
    if (is_comma_operator())
    {
        enumerator();
        enumeration_list1();
    }
    else
    {
        // Vazio (ε)
    }
}

void enumerator()
{
    if (is_identifier())
    {
        enumerator1();
    }
    else
    {
        // Enumerator inválido
    }
}

void enumerator1()
{
    if (is_assignment_operator())
    {
        constant_expression();
    }
    else
    {
        // Vazio (ε)
    }
}

void typedef_name()
{
    if (is_identifier())
    {
        // Identificador válido para typedef-name
    }
    else
    {
        // Identificador inválido para typedef-name
    }
}

void initializer()
{
    if (is_assignment_expression())
    {
        // Inicialização com assignment-expression
    }
    else if (is_initializer_list())
    {
        initializer_list();
        initializer1();
    }
    else
    {
        // Inicializador inválido
    }
}

void initializer1()
{
    if (is_comma_operator())
    {
        if (is_closing_brace())
        {
            // Nada a fazer, fechamento de chaves tratado em outra parte do código
        }
        else
        {
            initializer();
        }
    }
    else if (!is_closing_brace())
    {
        // Esperado fechamento de chaves '}' ou vírgula ','
    }
}

void initializer_list()
{
    initializer();
    initializer_list1();
}

void initializer_list1()
{
    if (is_comma_operator())
    {
        initializer();
        initializer_list1();
    }
    else
    {
        // Vazio (ε)
    }
}

void pointer()
{
    if (is_asterisk_operator())
    {
        // Pode haver type-qualifiers opcionais
        while (is_type_qualifier())
        {
            // Processar type-qualifier
        }
        pointer();
    }
    else
    {
        // Vazio (ε)
    }
}

void compound_statement()
{
    if (is_opening_brace())
    {
        // Processar declarações (declaration-definition) opcionais
        w)
        {
            // Processar declaration-definition
        }
        // Processar statements (statement) opcionais
        while (is_statement())
        {
            // Processar statement
        }
        if (is_closing_brace())
        {
            // Nada a fazer, fechamento de chaves tratado em outra parte do código
        }
        else
        {
            // Falta fechar a chave '}' do compound statement
        }
    }
    else
    {
        // Declaração de compound statement inválida
    }
}

void statement()
{
    if (is_labeled_statement())
    {
        // Processar labeled statement
    }
    else if (is_expression_statement())
    {
        // Processar expression statement
    }
    else if (is_compound_statement())
    {
        // Processar compound statement
    }
    else if (is_selection_statement())
    {
        // Processar selection statement
    }
    else if (is_iteration_statement())
    {
        // Processar iteration statement
    }
    else if (is_jump_statement())
    {
        // Processar jump statement
    }
    else if (is_function_statement())
    {
        // Processar function statement
    }
    else
    {
        // Statement inválido
    }
}

void labeled_statement()
{
    if (is_identifier())
    {
        if (is_colon_operator())
        {
            statement();
        }
        else
        {
            // Falta o operador de dois pontos ':' após o identificador
        }
    }
    else if (is_case_keyword())
    {
        constant_expression();
        if (is_colon_operator())
        {
            statement();
        }
        else
        {
            // Falta o operador de dois pontos ':' após a expressão constante do case
        }
    }
    else if (is_default_keyword())
    {
        if (is_colon_operator())
        {
            statement();
        }
        else
        {
            // Falta o operador de dois pontos ':' após a keyword default
        }
    }
    else
    {
        // Labeled statement inválido
    }
}

void expression_statement()
{
    if (is_expression())
    {
        if (is_semicolon_operator())
        {
            // Nada a fazer, ponto e vírgula tratado em outra parte do código
        }
        else
        {
            // Falta o ponto e vírgula ';'
        }
    }
    else if (is_semicolon_operator())
    {
        // Expressão vazia (ε)
    }
    else
    {
        // Expression statement inválido
    }
}

void selection_statement()
{
    if (is_if_keyword())
    {
        if (is_opening_parenthesis())
        {
            expression();
            if (is_closing_parenthesis())
            {
                statement();
                selection_statement1();
            }
            else
            {
                // Falta fechar o parêntese ')'
            }
        }
        else
        {
            // Falta abrir o parêntese '('
        }
    }
    else if (is_switch_keyword())
    {
        if (is_opening_parenthesis())
        {
            expression();
            if (is_closing_parenthesis())
            {
                statement();
            }
            else
            {
                // Falta fechar o parêntese ')'
            }
        }
        else
        {
            // Falta abrir o parêntese '('
        }
    }
    else
    {
        // Selection statement inválido
    }
}

void selection_statement1()
{
    if (is_else_keyword())
    {
        statement();
    }
    else
    {
        // Vazio (ε)
    }
}
